--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cssnano": "^7.1.1",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.16",
+    "lru-cache": "^11.2.2",
     "lucide-react": "^0.544.0",
     "next": "^14.2.33",
     "postcss": "^8.5.6",
@@ -39,8 +41,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.2",
     "zod": "^4.1.11",
-    "zustand": "^5.0.8",
-    "cssnano": "^7.1.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
